--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Let's Test Your Reaction Speed!</h1>
-    <div class="" id="redSquare">
+    <div class="" id="shape">
 
     </div>
   </body>
