begin adding js function

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
     <title>Reaction Test</title>
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="main.js"></script>
   </head>
   <body>
     <h1>Let's Test Your Reaction Speed!</h1>
-    <div class="" id="shape">
+    <div class="" id="shape" onclick="shapeDisplay()">
 
     </div>
   </body>
