playing with time display settings

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Let's Test Your Reaction Speed!</h1>
     <div class="" id="shape" onclick="shapeDisplay()">
-
+      <p>Your time is <span id="timeTaken"></span></p>
     </div>
   </body>
 </html>
