added display of time

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   </head>
   <body>
     <h1>Let's Test Your Reaction Speed!</h1>
+    <p>Your time is <span id="timeMeasure"></span></p>
     <div class="" id="shape" onclick="shapeDisplay()">
-      <p>Your time is <span id="timeTaken"></span></p>
+
     </div>
   </body>
 </html>
